--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 .env
+build
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +24,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+.gitignore
+src/config/testdb.ts
+/prisma/dev.db
+/prisma/test.db
