--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.21.0"
   }
 }
