Add optional Year of Study to SignUp

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.20.0",
+    "DatePicker": "^2.0.0",
+    "dayjs": "^1.11.13",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.27.0"
