--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-date-pickers": "^7.20.0",
+    "dayjs": "^1.11.13",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-dropzone": "^14.2.9",
     "react-router-dom": "^6.27.0"
   },
   "peerDependencies": {
