--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.12.1",
     "DatePicker": "^2.0.0",
     "dayjs": "^1.11.13",
+    "google-auth-library": "^9.14.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-dropzone": "^14.2.9",
