--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.0",
+    "@types/cheerio": "^0.22.35",
+    "cheerio": "^1.0.0",
     "express": "^4.21.1",
-    "prisma": "^5.21.0"
+    "prisma": "^5.21.0",
+    "puppeteer": "^23.6.0"
   }
 }
