--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.0",
-    "dotenv": "^16.4.5",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "middleware-http-errors": "^0.1.2",
     "prisma": "^5.21.0",
     "puppeteer": "^23.6.0"
   }
