please be the last

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.6",
@@ -39,5 +40,5 @@
     "ts.check",
     "build",
     "add-build"
-]
+  ]
 }
