--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.21.1",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
